update to graph-base plan and improve markdown front display

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/openai": "3.0.25",
     "@ai-sdk/openai-compatible": "^2.0.26",
     "@ai-sdk/react": "3.0.71",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/uuid": "^10.0.0",
     "@vercel/blob": "^0.26.0",
     "@xyflow/react": "^12.10.0",
@@ -19,10 +20,12 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.563.0",
+    "mermaid": "^11.12.2",
     "next": "^15.5.9",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "9.0.1",
+    "remark-gfm": "^4.0.1",
     "resumable-stream": "^2.2.0",
     "tailwind-merge": "^3.4.0",
     "tsx": "^4.21.0",
